--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="es" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">
-    <link rel="stylesheet" href="/styles/main.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Evaluacion 1</title>
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">
+  <link rel="stylesheet" href="./styles/main.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Evaluacion 1</title>
+</head>
+<body>
 
-<!-- HERO SECTION -->
+  <!-- HERO SECTION -->
 
   <header class="header">
 
@@ -31,9 +31,25 @@
     </div>
   </header>
 
-    <main>
+  <main class="main">
+  <section class="section1">
 
-    </main>
 
-  </body>
+    <p class="insomnia" cl>Insonmia tips</p>
+    <h3>Looking through a Window</h3>
+      <p class="article">
+        Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper sodales rutrum.
+      </p>
+      <button class="boton-go">
+      <a class="no-link-decoration" href="#">  Go</a>
+      </button>
+
+</section>
+
+<section class="section2">
+
+</section>
+  </main>
+
+</body>
 </html>
