--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <p class="parrafo-hero">In hac habitase platea dictumst.
       </p>
 
-      <div class="circulo-hero">
+      <div class="circulo">
 
         <img src="images/ico-scroll-down.svg" alt="flecha boton">
 
@@ -32,24 +32,67 @@
   </header>
 
   <main class="main">
-  <section class="section1">
+    <section class="section1">
 
 
-    <p class="insomnia" cl>Insonmia tips</p>
-    <h3>Looking through a Window</h3>
+      <p class="insomnia" cl>Insonmia tips</p>
+      <h3 class="encabezado">Looking through a Window</h3>
       <p class="article">
         Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper sodales rutrum.
       </p>
       <button class="boton-go">
-      <a class="no-link-decoration" href="#">  Go</a>
+        <a class="no-link-decoration" href="#">  Go</a>
       </button>
 
-</section>
+    </section>
 
-<section class="section2">
+    <section class="section2">
 
-</section>
+      <div class="grid"> <!-- contenedor -->
+        <div class="encabezado a">3 Reasons to purchase</div>
+        <div class="b">
+          <p class="titulo-purchase">
+            Ut sed metus
+          </p>
+          <p class="texto-purchase">
+            Lorem ipsum dolor sit amet, consecteur.
+          </p>
+        </div>
+        <div class="c">
+          <p class="titulo-purchase">
+            Curabitur ac erat
+          </p>
+          <p class="texto-purchase">
+            Mauris mattis urna quis lorem molestie..
+          </p>
+        </div>
+        <div class="d">
+          <p class="titulo-purchase">
+            Morbi dictum
+          </p>
+          <p class="texto-purchase">
+            Aliquam in dolor et dolor tincidunt.
+          </p>
+        </div>
+        <div class="boton-reasons">More reasons</div>
+      </div>
+
+    </section>
   </main>
+
+  <footer class="footer">
+    <div class="circulo-footer">
+
+      <img src="images/ico-arrow.svg" alt="flecha hacia arriba">
+
+    </div>
+
+    <p class="copiright">©2017</p>
+    <div class="love-components">
+      we&hearts;components
+    </div>
+
+  </footer>
 
 </body>
 </html>
