add new details

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="header-bg">
 
-      <button class="btn" type="button" name="button"> <img class="" src="images/ico-menu.svg" alt="decoracion boton menu"> </button>
+      <div class="btn" type="button" name="button" href="#"> <img class="" src="images/ico-menu.svg" alt="decoracion boton menu"> </div>
 
       <h1 class="encabezado-principal">anonymus proxy</h1>
 
@@ -23,9 +23,9 @@
       </p>
 
       <div class="circulo">
-
+        <a class="enlace-ancla" href="#ancla1">
         <img src="images/ico-scroll-down.svg" alt="flecha boton">
-
+        </a>
       </div>
 
     </div>
@@ -82,9 +82,9 @@
 
   <footer class="footer">
     <div class="circulo-footer">
-
+    <a class="enlace-ancla" href="#">
       <img src="images/ico-arrow.svg" alt="flecha hacia arriba">
-
+    </a>
     </div>
 
     <p class="copiright">©2017</p>
