--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es" dir="ltr">
 <head>
   <meta charset="utf-8">
-  <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">
+  <link <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,500,700" rel="stylesheet">
   <link rel="stylesheet" href="./styles/main.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Evaluacion 1</title>
@@ -15,9 +15,11 @@
 
     <div class="header-bg">
 
-      <div class="btn" type="button" name="button" href="#"> <img class="" src="images/ico-menu.svg" alt="decoracion boton menu"> </div>
+      <div class="btn" type="button" name="button" href="#"> <img class="" src="images/ico-menu.svg" alt="decoracion boton menu">
+      </div>
 
-      <h1 class="encabezado-principal">anonymus proxy</h1>
+      <h1 class="encabezado-principal">anonymous proxy
+      </h1>
 
       <p class="parrafo-hero">In hac habitase platea dictumst.
       </p>
@@ -34,22 +36,26 @@
   <main class="main">
     <section class="section1">
 
+<div class="contenedor-sec1">
 
-      <p class="insomnia" cl>Insonmia tips</p>
-      <h3 class="encabezado">Looking through a Window</h3>
+      <p class="insomnia" cl>Insonmia tips
+      </p>
+      <h3 class="encabezado">Looking through a Window
+      </h3>
       <p class="article">
         Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper sodales rutrum.
       </p>
       <button class="boton-go">
-        <a class="no-link-decoration" href="#">  Go</a>
+        <a class="no-link-decoration" href="#">  Go
+        </a>
       </button>
-
+  </div>
     </section>
 
     <section class="section2">
 
       <div class="grid"> <!-- contenedor -->
-        <div class="encabezado a">3 Reasons to purchase</div>
+        <div class="a">3 Reasons to purchase</div>
         <div class="b">
           <p class="titulo-purchase">
             Ut sed metus
@@ -74,8 +80,9 @@
             Aliquam in dolor et dolor tincidunt.
           </p>
         </div>
-        <div class="boton-reasons">More reasons</div>
+        <div class="boton-reasons e">More reasons</div>
       </div>
+
 
     </section>
   </main>
@@ -89,7 +96,7 @@
 
     <p class="copiright">©2017</p>
     <div class="love-components">
-      we&hearts;components
+      we ❤︎ components
     </div>
 
   </footer>
