--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </header>
 
   <main class="main">
-    <section class="section1">
+    <section id="ancla1"  class="section1">
 
 <div class="contenedor-sec1">
 
@@ -96,7 +96,7 @@
 
     <p class="copiright">©2017</p>
     <div class="love-components">
-      we ❤︎ components
+      we<span class="primary"> ❤︎</span> components
     </div>
 
   </footer>
