new footer animation

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   </main>
 
   <footer class="footer">
-    <div class="circulo-footer">
+    <div class="circulo-footer jump">
     <a class="enlace-ancla" href="#">
       <img src="images/ico-arrow.svg" alt="flecha hacia arriba">
     </a>
