--- a/index.html
+++ b/index.html
@@ -12,50 +12,44 @@
   <!-- HERO SECTION -->
 
   <header class="header">
-
     <div class="header-bg">
 
-      <div class="btn" type="button" name="button" href="#"> <img class="" src="images/ico-menu.svg" alt="decoracion boton menu">
+      <div class="btn" type="button" name="button" href="#"> <img class=""  src="images/ico-menu.svg" alt="decoracion boton menu">
       </div>
-
-      <h1 class="encabezado-principal">anonymous proxy
+      <h1 class="encabezado-principal">
+        anonymous proxy
       </h1>
-
-      <p class="parrafo-hero">In hac habitase platea dictumst.
+      <p class="parrafo-hero">
+        In hac habitase platea dictumst.
       </p>
-
       <div class="circulo">
         <a class="enlace-ancla" href="#ancla1">
-        <img src="images/ico-scroll-down.svg" alt="flecha boton">
+          <img src="images/ico-scroll-down.svg" alt="flecha boton">
         </a>
       </div>
-
     </div>
   </header>
-
   <main class="main">
     <section id="ancla1"  class="section1">
-
-<div class="contenedor-sec1">
-
-      <p class="insomnia" cl>Insonmia tips
-      </p>
-      <h3 class="encabezado">Looking through a Window
-      </h3>
-      <p class="article">
-        Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper sodales rutrum.
-      </p>
-      <button class="boton-go">
-        <a class="no-link-decoration" href="#">  Go
-        </a>
-      </button>
-  </div>
+      <div class="contenedor-sec1">
+        <p class="insomnia" cl>Insonmia tips
+        </p>
+        <h3 class="encabezado">Looking through a Window
+        </h3>
+        <p class="article">
+          Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper sodales rutrum.
+        </p>
+        <button class="boton-go">
+          <a class="no-link-decoration" href="#">  Go
+          </a>
+        </button>
+      </div>
     </section>
-
     <section class="section2">
-
       <div class="grid"> <!-- contenedor -->
-        <div class="a">3 Reasons to purchase</div>
+        <div class="a">
+          3 Reasons to purchase
+        </div>
         <div class="b">
           <p class="titulo-purchase">
             Ut sed metus
@@ -82,23 +76,18 @@
         </div>
         <div class="boton-reasons e">More reasons</div>
       </div>
-
-
     </section>
   </main>
-
   <footer class="footer">
     <div class="circulo-footer jump">
-    <a class="enlace-ancla" href="#">
-      <img src="images/ico-arrow.svg" alt="flecha hacia arriba">
-    </a>
+      <a class="enlace-ancla" href="#">
+        <img src="images/ico-arrow.svg" alt="flecha hacia arriba">
+      </a>
     </div>
-
     <p class="copiright">©2017</p>
     <div class="love-components">
       we<span class="primary"> ❤︎</span> components
     </div>
-
   </footer>
 
 </body>
