--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
   <!-- HERO SECTION -->
 
   <header class="header">
+    <div class="btn"> <img class=""  src="images/ico-menu.svg" alt="decoracion boton menu">
+    </div>
     <div class="header-bg">
-
-      <div class="btn" type="button" name="button" href="#"> <img class=""  src="images/ico-menu.svg" alt="decoracion boton menu">
-      </div>
       <h1 class="encabezado-principal">
         anonymous proxy
       </h1>
@@ -39,10 +38,10 @@
         <p class="article">
           Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper sodales rutrum.
         </p>
-        <button class="boton-go">
+        <div class="boton-go">
           <a class="no-link-decoration" href="#">  Go
           </a>
-        </button>
+        </div>
       </div>
     </section>
     <section class="section2">
