--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
       <p class="parrafo-hero">
         In hac habitase platea dictumst.
       </p>
-      <div class="circulo">
-        <a class="enlace-ancla" href="#ancla1">
+
+        <a class="circulo enlace-ancla" href="#ancla1">
           <img src="images/ico-scroll-down.svg" alt="flecha boton">
         </a>
       </div>
-    </div>
+
   </header>
   <main class="main">
     <section id="ancla1"  class="section1">
@@ -73,16 +73,14 @@
             Aliquam in dolor et dolor tincidunt.
           </p>
         </div>
-        <div class="boton-reasons e">More reasons</div>
+        <a class="boton-reasons e" href="#">More reasons</a>
       </div>
     </section>
   </main>
   <footer class="footer">
-    <div class="circulo-footer jump">
-      <a class="enlace-ancla" href="#">
+      <a class="circulo-footer jump enlace-ancla" href="#">
         <img src="images/ico-arrow.svg" alt="flecha hacia arriba">
       </a>
-    </div>
     <p class="copiright">©2017</p>
     <div class="love-components">
       we<span class="primary"> ❤︎</span> components
