--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es" dir="ltr">
 <head>
   <meta charset="utf-8">
-  <link <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,500,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,500,700" rel="stylesheet">
   <link rel="stylesheet" href="./styles/main.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Evaluacion 1</title>
@@ -29,6 +29,10 @@
 
   </header>
   <main class="main">
+    <div class="fecha">
+      <h2 class="h2">Anonymous proxy</h2>
+      <p class="P">15/06/2018</p>
+    </div>
     <section id="ancla1"  class="section1">
       <div class="contenedor-sec1">
         <p class="insomnia" cl>Insonmia tips
